relm4-macros/tests/ui/compile-fail/component-missing-widgets.stderr
error: Did not find type `Widgets`
 --> tests/ui/compile-fail/component-missing-widgets.rs:5:1
  |
5 | #[relm4_macros::component]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `relm4_macros::component` (in Nightly builds, run with -Z macro-backtrace for more info)
